--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h2>Permalink Generator</h2>
+    <div class="center container mt-5">
+        <h2 class="text-center">Permalink Generator</h2>
+        <br/>
         <div class="form-group">
             <div class="col-sm-10 col-lg-8">
                 <input type="text" class="form-control border-dark rounded-0" id="title" placeholder="Enter Your Title">
@@ -30,8 +31,7 @@
                 <button class="btn btn-outline-info rounded-0" onclick="generatePermalink()">Generate</button>
             </div>
         </div>
-        <hr>
-        <div class="col-sm-offset-2 col-sm-10">
+        <div class="col-sm-10 col-lg-8">
             <div class="input-group">
                 <input type="text" id="permalink" class="form-control rounded-0 border-dark" readonly>
                 <span id="copyButton" class="input-group-addon btn btn-dark rounded-0 border-dark"
